# weather-a2a-agent

./: .env.example  .gitignore  README.md  pyproject.toml  setup.py
src/weather_agent/: __init__.py  a2a_encoding.py  a2a_executor.py  agent.py  agent_card.py  scripted_client.py  server.py  weather.py
tests/: conftest.py  test_a2a_encoding.py  test_a2a_executor.py  test_agent_approval.py  test_server.py  test_weather.py
