[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "weather-a2a-agent"
version = "0.1.0"
description = "A fully A2A-compliant weather agent built with the Microsoft Agent Framework, with in-memory session state and human-in-the-loop tool approval."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Reference Implementation" }]
keywords = ["a2a", "agent-framework", "microsoft", "weather", "human-in-the-loop"]

dependencies = [
    # Microsoft Agent Framework core + the A2A connector (A2AExecutor / A2AAgent).
    "agent-framework>=1.10.0",
    "agent-framework-a2a>=1.0.0b0",
    # HTTP client used to reach the Open-Meteo geocoding + forecast APIs.
    "httpx>=0.27",
    # ASGI server used to host the A2A endpoint.
    "uvicorn>=0.30",
]

[project.optional-dependencies]
# Bring your own LLM. Any Agent Framework chat client works; OpenAI is the default.
openai = ["agent-framework-openai>=1.10.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",          # httpx request mocking for the weather tool tests
]

[project.scripts]
weather-a2a-agent = "weather_agent.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/weather_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = [
    # The framework marks several building blocks as experimental; that is expected.
    "ignore::UserWarning",
]
